--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -44,18 +44,18 @@
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:600px;">
-                        <richcc-datepicker datepicker-options="sample.dtPickerOptions" richcc-options="sample.config" ng-model="sample.dt" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
+                        <richcc-datepicker datepicker-options="sample.dtPickerOptions" datepicker-options="sample.dtPickerOptions" richcc-options="sample.config" ng-model="sample.dt" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
                     </div>
                 </div>
                 <div class="col-xs-4" style="padding:0;">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <richcc-datepicker ng-model="sample.dt" richcc-options="sample.lightconfig" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden" show-weeks="false" class="well well-sm"></richcc-datepicker>
+                            <richcc-datepicker datepicker-options="sample.dtPickerOptions" ng-model="sample.dt" richcc-options="sample.lightconfig" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <richcc-datepicker ng-model="sample.dt" richcc-options="sample.lightconfig2" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden"  show-weeks="false" class="well well-sm"></richcc-datepicker>
+                            <richcc-datepicker datepicker-options="sample.dtPickerOptions" ng-model="sample.dt" richcc-options="sample.lightconfig2" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden"  class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:600px;">
-                    <richcc-datepicker datepicker-mode="'month'" richcc-options="sample.config2" ng-model="sample.dt" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" show-weeks="false" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
+                    <richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" richcc-options="sample.config2" ng-model="sample.dt" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
                 </div>
             </div>
         </div>
