Added config flag 'showMarkerForMoreEvents' tp hide marker when more than two events present

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -99,7 +99,7 @@
                                     <span class="text">{{event.name}}</span>
                                 </div>
                             </div>
-                            <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2">
+                            <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2 && showMarkerForMoreEvents != false">
                                 <div class="icon-container">
                                     <i class="icon icon-more"></i>
                                 </div>
