--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -87,6 +87,10 @@
                                 <span>{{::dt.label}}</span>
                             </div>
                         </div>
+                        <div class="richcc-time-label" ng-show="showDataLabel == true && light != true">
+                            <span ng-show="dataLabels[dt.key]">{{::dataLabels[dt.key]}}</span>
+                            <span ng-hide="dataLabels[dt.key]">{{::defaultDataLabel}}</span>
+                        </div>
                         <div class="markHolder" style="position:relative;" ng-show="eventDetails[dt.key].length > 0">
                             <div class="mark step-{{event.step}}"
                                  ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
