--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -327,7 +327,7 @@
     <!--richccDayPopup.html-->
     <div id="richccTmplDayPopup">
         <div class="richcc-day-popup">
-            <div class="event-container">
+            <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{dt.date | date:'dd MMM, yyyy'}} ({{eventDetails[dt.key].length}} Events)</div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in eventDetails[dt.key]">
@@ -341,7 +341,9 @@
                     </div>
                 </div>
             </div>
-            <div class="event-action-container" ng-class="{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}">
+            <div class="event-action-container" 
+                 ng-class="{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}"
+                 ng-show="eventPopupSettings.showLeft || eventPopupSettings.showRight">
                 <button class="event-action" ng-if="eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.leftLabel || 'Add Events'}}</button>
                 <button class="event-action" ng-if="eventPopupSettings.showRight != false" ng-click="popUpRightHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.rightLabel || 'Edit Events'}}</button>
                 <div class="event-separator"></div>
@@ -351,7 +353,7 @@
     <!--richccMonthPopup.html-->
     <div id="richccTmplRichccMonthPopup">
         <div class="richcc-day-popup">
-            <div class="event-container">
+            <div class="event-container" ng-class="{'noActions': !(parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{popitem.date | date:'dd MMM, yyyy'}} ({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key]">
@@ -365,7 +367,9 @@
                     </div>
                 </div>
             </div>
-            <div class="event-action-container" ng-class="{'singleButtonOnly' : (parent.eventPopupSettings.showLeft != false && parent.eventPopupSettings.showRight == false) || (parent.eventPopupSettings.showLeft == false && parent.eventPopupSettings.showRight != false)}">
+            <div class="event-action-container" 
+                 ng-class="{'singleButtonOnly' : (parent.eventPopupSettings.showLeft != false && parent.eventPopupSettings.showRight == false) || (parent.eventPopupSettings.showLeft == false && parent.eventPopupSettings.showRight != false)}"
+                 ng-show="parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight">
                 <button class="event-action" ng-if="parent.eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">{{parent.eventPopupSettings.leftLabel || 'Add Events'}}</button>
                 <button class="event-action" ng-if="parent.eventPopupSettings.showRight != false" ng-click="popUpRightHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">{{parent.eventPopupSettings.rightLabel || 'Edit Events'}}</button>
                 <div class="event-separator"></div>
