Adding Configurable Pop Up Templates

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -70,7 +70,7 @@
                         ng-disabled="::dt.disabled"
                         ng-init="columnindex = $index"
                         ng-click="richccDaySelected(dt, eventDetails[dt.key])"
-                        uib-popover-template="'template/richcc/richccDayPopup.html'"
+                        uib-popover-template="dayPopUpTmpl"
                         popover-trigger="{{eventDetails[dt.key].length > 0 && eventPopupSettings.hidden != true ? 'outsideClick' : 'none'}}"
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForDayMap(rowindex, columnindex)}}"
@@ -138,7 +138,7 @@
                             <div class="richcc-eventbox-content"
                                  ng-class="{'notInPresentMonth' : column.monthIndex != monthIndex}"
                                  ng-init="popitem = column;"
-                                 uib-popover-template="'template/richcc/richccMonthPopup.html'"
+                                 uib-popover-template="monthPopUpTmpl"
                                  ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
                                  popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 &&  eventPopupSettings.hidden != true && column.monthIndex == monthIndex ? 'outsideClick' : 'none'}}"
                                  popover-append-to-body="true"
@@ -219,7 +219,7 @@
                         ng-init="mdt = column[row]; popitem = column[row]"
                         ng-attr-len="{{parent.monthWiseEventDetails[monthIndex][mdt.key].length}}"
                         ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
-                        uib-popover-template="'template/richcc/richccMonthPopup.html'"
+                        uib-popover-template="monthPopUpTmpl"
                         popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 &&  eventPopupSettings.hidden != true ? 'outsideClick' : 'none'}}"
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForMonthHeatMap(monthIndex)}}"
