--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -50,7 +50,7 @@
                 <div class="col-xs-4" style="padding:0;">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight" ng-model="sample.dt" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden" class="well well-sm"></richcc-datepicker>
+                            <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight" ng-model="sample.dt" events="sample.sampleEvents" event-popup-settings="sample.popupSettings" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                     <div class="col-xs-12" style="padding:0;">
