--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -41,14 +41,14 @@
                     <th colspan="1" ng-if="light != true"></th>
                     <th colspan="{{light == true ? 8 : 5}}">
                         <div class="header-actions" ng-class="{'calNavHidden' : hideCalNav == true}">
-                            <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
-                                <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
-                            <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                            <div class="richcc-icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
-                                <i class="icon icon-ScrollChevronRightLegacy"></i>
+                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
                     </th>
@@ -75,7 +75,7 @@
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForDayMap(rowindex, columnindex)}}"
                         popover-class="richcc-popup-container">
-                        <div class="icon-container dayHolder"
+                        <div class="richcc-icon-container dayHolder"
                              uib-is-class="
                              'cc-info' for selectedDt,
                              'cc-active' for activeDt
@@ -104,8 +104,8 @@
                                 </div>
                             </div>
                             <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2 && showMarkerForMoreEvents != false">
-                                <div class="icon-container">
-                                    <i class="icon icon-more"></i>
+                                <div class="richcc-icon-container">
+                                    <i class="richcc-icon icon-more"></i>
                                 </div>
                             </div>
                         </div>
@@ -171,14 +171,14 @@
                     <th colspan="1"></th>
                     <th colspan="4">
                         <div class="header-actions">
-                            <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
-                            <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                            <div class="richcc-icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronRightLegacy"></i>
+                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
                     </th>
@@ -242,14 +242,14 @@
                     <th colspan="1"></th>
                     <th colspan="4">
                         <div class="header-actions">
-                            <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
-                            <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                            <div class="richcc-icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronRightLegacy"></i>
+                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
                     </th>
@@ -384,14 +384,14 @@
                     <th colspan="1"></th>
                     <th colspan="3">
                         <div class="header-actions">
-                            <div class="icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronLeftLegacy"></i>
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
-                            <div class="icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
+                            <div class="richcc-icon-container labelHolder" id="{{::uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
-                                <i class="icon icon-ScrollChevronRightLegacy"></i>
+                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
                     </th>
