--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -95,13 +95,15 @@
                         <div class="markHolder" style="position:relative;" ng-show="eventDetails[dt.key].length > 0">
                             <div class="mark step-{{event.step}}"
                                  ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
-                                 ng-style="{'color': event.color, 'width': light != true ?  'calc(' + 100 * event.paintBoxLength + '% - 5px)' : 'calc(' + 100 * event.paintBoxLength + '% - 20px)'}"
+                                 ng-style="{'color': event.color, 'width': light != true ?  'calc(' + 100 * event.paintBoxLength + '% - 8px)' : 'calc(' + 100 * event.paintBoxLength + '% - 20px)'}"
                                  ng-repeat="event in eventDetails[dt.key]"
                                  ng-if="event.startPaint == true"
                                  style="color:#fff;">
                                 <div class="mark-text-initial" ng-if="light == true" ng-style="{'color': event.bgcolor}">{{event.initial | limitTo: 1}}</div>
-                                <div class="mark-stripe" ng-style="{'background-color': event.bgcolor, 'border-color': event.highlightBorderColor}" ng-class="{'highlightBorder': light == false ? event.highlightBorder : ''}">
-                                    <span class="text">{{event.name}}</span>
+                                <div class="mark-stripe" ng-style="{'border-color': light == false && event.highlightBorder == true ? event.highlightBorderColor : 'transparent'}" ng-class="{'highlightBorder': light == false ? event.highlightBorder : ''}">
+                                    <div class="mark-stripe-color" ng-style="{'background-color': event.bgcolor}">
+                                        <span class="text">{{event.name}}</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 2 && showMarkerForMoreEvents != false">
