--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -30,7 +30,7 @@
             color: black;
         }
 
-        .richcc-td.dayDisabled {
+        .dayDisabled {
             background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAI0lEQVQIW2NkQAbFx9IY4fziY2kMvVazIAJQDojJiMwBCQAAOWkKpPDCzSoAAAAASUVORK5CYII=);
         }
 
