--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -44,7 +44,7 @@
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
-                        <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
+                        <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)"  event-click-callback="sample.eventClickCallback(data)" ></richcc-datepicker>
                     </div>
                 </div>
                 <div class="col-xs-4" style="padding:0;">
@@ -64,7 +64,7 @@
         <div style="display:block; height:630px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:630px;">
-                    <richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
+                    <richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
                 </div>
             </div>
         </div>
