--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -338,7 +338,7 @@
             <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{dt.date | date:'dd MMM, yyyy'}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
                 <div class="event-details-container">
-                    <div class="event-detail" ng-repeat="event in eventDetails[dt.key]">
+                    <div class="event-detail" ng-repeat="event in eventDetails[dt.key]" ng-click="popUpEventClickHandler(dt, event)">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}">
                             <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
@@ -364,7 +364,7 @@
             <div class="event-container" ng-class="{'noActions': !(parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{popitem.date | date:'dd MMM, yyyy'}} <span ng-show="parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 ">({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</span></div>
                 <div class="event-details-container">
-                    <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key]">
+                    <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key]" ng-click="popUpEventClickHandler(popitem, event)">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}">
                             <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
