--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="lib/angular-workers.min.js"></script>
     <script type="text/javascript" src="lib/angular-animate.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-1.1.1.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
@@ -42,7 +43,7 @@
     <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
         <div style="display:block; height:630px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
-                <div class="col-xs-8">
+                <!--<div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
                         <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
                     </div>
@@ -58,7 +59,7 @@
                             <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight2" ng-model="sample.dt" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden"  class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
         <div style="display:block; height:630px;width:1367px;margin:30px auto;">
