--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -123,7 +123,7 @@
     </div>
     <!--monthEventViewer.html-->
     <div id="richccTmplMonthEventViewer">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="::{'richcc-light': light}" ng-init="parent = $parent">
             <thead style="height:0 !important; margin:0;padding:0;line-height:0;">
                 <tr class="header-action-holder" style="height:0 !important; margin:0;padding:0;line-height:0;">
                     <th colspan="1" class="w48" style="height:0 !important; margin:0;padding:0;line-height:0;"></th>
@@ -137,22 +137,22 @@
                         ng-attr-colspan="{{weekindex == 5 ? 3 : 7}}"
                         class="uib-day text-center richcc-td richcc-td-space{{weekindex}}"
                         ng-init="weekindex = $index">
-                        <div class="richcc-month-eventbox" ng-repeat="column in row track by $index" ng-if="(weekindex != 5) || (weekindex == 5 && $index < 3)">
+                        <div class="richcc-month-eventbox" ng-repeat="column in row track by $index" ng-if="::(weekindex != 5) || (weekindex == 5 && $index < 3)">
                             <div class="richcc-eventbox-content {{::column.customClass}}"
-                                 ng-class="{'notInPresentMonth' : column.monthIndex != monthIndex, 'showingDates': parent.eventPopupSettings.showDateInYearView == true}"
+                                 ng-class="::{'notInPresentMonth' : column.monthIndex != monthIndex, 'showingDates': parent.eventPopupSettings.showDateInYearView == true}"
                                  ng-init="popitem = column;mEvents = parent.monthWiseEventDetails[monthIndex][popitem.key]"                                 
                                  uib-popover-template="monthPopUpTmpl"
                                  ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
-                                 popover-trigger="{{popUpTriggerYearView(mEvents)}}"
+                                 popover-trigger="{{::popUpTriggerYearView(mEvents)}}"
                                  popover-append-to-body="true"
-                                 popover-placement="{{getPopUpPositionForMonthEventMap(monthIndex, weekindex)}}"
+                                 popover-placement="{{::getPopUpPositionForMonthEventMap(monthIndex, weekindex)}}"
                                  popover-class="richcc-popup-container">                                
                                 <div class="markHolder" style="position:relative;">
-                                    <div class="month-date" ng-show="column.monthIndex == monthIndex && parent.eventPopupSettings.showDateInYearView == true">{{popitem.date | date:'dd'}}</div>
+                                    <div class="month-date" ng-show="::column.monthIndex == monthIndex && parent.eventPopupSettings.showDateInYearView == true">{{::popitem.date | date:'dd'}}</div>
                                     <div class="mark step-{{event.step}}"
                                          ng-show="parent.monthWiseEventDetails[monthIndex][column.key].length > 0"
-                                         ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
-                                         ng-style="{'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLengthForMonth + '% - 18px)'}"
+                                         ng-class="::{'top': event.order == 1, 'bottom': event.order == 2}"
+                                         ng-style="::{'color': event.color, 'width': 'calc(' + 100 * event.paintBoxLengthForMonth + '% - 18px)'}"
                                          ng-repeat="event in parent.monthWiseEventDetails[monthIndex][column.key]"
                                          ng-if="event.startPaintForMonth == true"
                                          style="color:#fff;">
@@ -212,7 +212,7 @@
     </div>
     <!--monthHeatViewer.html-->
     <div id="richccTmplMonthHeatViewer">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="::{'richcc-light': light}" ng-init="parent = $parent">
             <thead>
                 <tr class="header-action-holder">
                     <th colspan="7" cc-key="monthSelectCallback()">{{parent.monthViewData[monthIndex].dt.label | limitTo:3}}</th>
@@ -233,8 +233,8 @@
                         popover-placement="{{getPopUpPositionForMonthHeatMap(monthIndex)}}"
                         popover-class="richcc-popup-container">
                         <div class="richcc-mv-box"
-                             ng-class="{'fullyOpaque': parent.monthWiseEventDetails[monthIndex][mdt.key].length > 2}"
-                             ng-attr-transparent="{{parent.monthWiseEventDetails[monthIndex][mdt.key].length}}"></div>
+                             ng-class="::{'fullyOpaque': parent.monthWiseEventDetails[monthIndex][mdt.key].length > 2}"
+                             ng-attr-transparent="{{::parent.monthWiseEventDetails[monthIndex][mdt.key].length}}"></div>
                     </td>
                 </tr>
             </tbody>
@@ -283,7 +283,7 @@
     </div>
     <!--monthViewerDayMarker.html-->
     <div id="richccTmplMonthViewerDayMarker">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="::{'richcc-light': light}" ng-init="parent = $parent">
             <thead ng-if="yearMapHeat == true">
                 <tr class="header-action-holder">
                     <th colspan="1">&nbsp;</th>
@@ -307,7 +307,7 @@
                         ng-attr-colspan="{{weekindex == 5 ? 3 : 7}}"
                         class="uib-day text-center richcc-td richcc-td-space{{weekindex}}"
                         ng-init="weekindex = $index">
-                        <div class="richcc-month-eventbox eventDayMarker" ng-repeat="column in row track by $index" ng-if="(weekindex != 5) || (weekindex == 5 && $index < 3)">
+                        <div class="richcc-month-eventbox eventDayMarker" ng-repeat="column in row track by $index" ng-if="::(weekindex != 5) || (weekindex == 5 && $index < 3)">
                             <span>{{monthWiseEventMarkers[0][$index].abbr | limitTo:1}}</span>
                         </div>
                     </td>
@@ -335,7 +335,7 @@
     <!--richccDayPopup.html-->
     <div id="richccTmplDayPopup">
         <div class="richcc-day-popup">
-            <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
+            <div class="event-container" ng-class="::{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{dt.date | date:'dd MMM, yyyy'}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in eventDetails[dt.key]">
@@ -350,7 +350,7 @@
                 </div>
             </div>
             <div class="event-action-container" 
-                 ng-class="{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}"
+                 ng-class="::{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}"
                  ng-show="eventPopupSettings.showLeft || eventPopupSettings.showRight">
                 <button class="event-action" ng-if="eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.leftLabel || 'Add Events'}}</button>
                 <button class="event-action" ng-if="eventPopupSettings.showRight != false" ng-click="popUpRightHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.rightLabel || 'Edit Events'}}</button>
@@ -361,8 +361,8 @@
     <!--richccMonthPopup.html-->
     <div id="richccTmplRichccMonthPopup">
         <div class="richcc-day-popup">
-            <div class="event-container" ng-class="{'noActions': !(parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight)}">
-                <div class="event-container-label">{{popitem.date | date:'dd MMM, yyyy'}} <span ng-show="parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 ">({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</span></div>
+            <div class="event-container" ng-class="::{'noActions': !(parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight)}">
+                <div class="event-container-label">{{::popitem.date | date:'dd MMM, yyyy'}} <span ng-show="parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 ">({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</span></div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key]">
                         <div class="event-marker"></div>
