--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -41,9 +41,9 @@
     <button ng-click="sample.insertSampleEvent()">Insert Sample</button>
     <pre class="col-xs-12" style="line-height:46px;padding:0 15px;margin:0;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
     <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
-        <div style="display:block; height:630px;width:1367px;margin:30px auto;">
+        <!--<div style="display:block; height:630px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
-                <!--<div class="col-xs-8">
+                <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
                         <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
                     </div>
@@ -59,9 +59,9 @@
                             <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight2" ng-model="sample.dt" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden"  class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
-        </div>
+        </div>-->
         <div style="display:block; height:630px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:630px;">
